# ai-deeplearning

./: .gitattributes  README.md
tweet-disaster/: .gitignore  pyproject.toml  tweet-disaster-bert-sharp.ipynb  tweet_disaster-analyse-pandas.ipynb  tweet_disaster-bagOfWords-all-features.ipynb  tweet_disaster-bagOfWords.ipynb
tweet-span-sentiment/: 0.26.0  Deploy_AWS.ipynb  dl1-project-sentiment-extraction.ipynb  index.html  tweet-sentiment-extraction-sharp-v2.ipynb  tweet-sentiment-extraction-sharp.ipynb  tweet_extraction.ipynb  twitter-sentiment-extraction-shap-multiple-models-v2.ipynb  twitter-sentiment-extraction-shap-multiple-models-v3.ipynb  twitter_sentiment_extraction_gradio_interface.py
tweet-span-sentiment/disaster_tweet_model/: model.safetensors
tweet-span-sentiment/finetune-BERT-disaster/checkpoint-125/: optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
tweet-span-sentiment/finetune-BERT-disaster/checkpoint-250/: model.safetensors  optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
tweet-span-sentiment/finetune-BERT-disaster/checkpoint-375/: model.safetensors  optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
tweet-span-sentiment/finetune-BERT-disaster/runs/Jan26_18-21-28_Dwip-Lappy/: events.out.tfevents.1737933688.Dwip-Lappy.5352.0
tweet-span-sentiment/finetune-BERT-tweet/checkpoint-375/: config.json  rng_state.pth  trainer_state.json
tweet-span-sentiment/runs/sentiment_analysis/: events.out.tfevents.1738009585.Dwip-Lappy.22004.0
(+16 files in other folders)
