[project]
name = "tweet-disaster"
version = "0.1.0"
description = ""
authors = [
    {name = "Eric"}
]
requires-python = ">=3.12"
dependencies = [
    "numpy (==2.0.2)",
    "notebook (>=7.3.2,<8.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "tensorflow (>=2.18.0,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "pydot (>=3.0.4,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false